# fortitude

./: .gitignore  manage.py  pyproject.toml
apps/collections/: models.py  urls.py  utils.py  views.py
apps/collections/tests/: test_utils.py
apps/permissions/: models.py
apps/permissions/tests/: test_utils.py
fortitude/: urls.py  wsgi.py
fortitude/settings/: base.py
templates/: base.html  nav.html  sidebar.html
