[tool.poetry]
name = "fortitude"
version = "0.1.0"
description = ""
authors = ["Gabriel Couture <gacou54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
whitenoise = "^6.8.2"
django-jazzmin = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
